ncc/testsuite/negative/extension-methods.n
#pragma indent
using System.Console

[Record] \
class A
  public v : int
  public foo () : void
    Write ("foo()\n")

class B
  public foo (this a : A, p : int) : void // E: extension methods need to be marked public static
    Write ($"foo($(a.v),$p)\n")

class C
  public foo (p : int, this a : A) : void // E: 'this' modifier \(for extension method\) can only be used on the first parameter
    Write ($"foo($(a.v),$p)\n")

class D[X]
  public static foo (this a : A, p : int) : void // E: cannot define extension methods in generic types
    ()

class D2
  public static foo[A,B] (this a : D[B]) : void // E: type parameters.*extension method
    ()
